--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <apigoogle.version>1.30.9</apigoogle.version>
         <socialfacebook.version>1.5.22.RELEASE</socialfacebook.version>
         <version.cloudinary>1.26.0</version.cloudinary>
+        <version.gson>2.8.5</version.gson>
     </properties>
     <dependencies>
         <dependency>
@@ -41,6 +42,24 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${version.gson}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+<!--            <version>5.4.29.Final</version>-->
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
