--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>foods-app</finalName>
     </build>
     <repositories>
         <repository>
