--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,12 @@ spring:
 
   #connection MySQL
   datasource:
-    url: jdbc:mysql://localhost:3306/db_foods?useUnicode=yes&characterEncoding=UTF-8
-    username: root
-    password: nhanbn98
+#    url: jdbc:mysql://localhost:3306/db_foods?useUnicode=yes&characterEncoding=UTF-8
+    url: jdbc:mysql://b5941b2d075b5d:cebfac38@us-cdbr-east-05.cleardb.net/heroku_9097815b6cfd14d?reconnect=true
+#    username: root
+    username: b5941b2d075b5d
+#    password: nhanbn98
+    password: cebfac38
 
 google:
   clientId: 569599946060-9s09k2ujflc4ar0p5fsml7t6d78i3a0v.apps.googleusercontent.com
