--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   #connection MySQL
   datasource:
 #    url: jdbc:mysql://localhost:3306/db_foods?useUnicode=yes&characterEncoding=UTF-8
-    url: jdbc:mysql://b5941b2d075b5d:cebfac38@us-cdbr-east-05.cleardb.net/heroku_9097815b6cfd14d?reconnect=true
+    url: jdbc:mysql://b5941b2d075b5d:cebfac38@us-cdbr-east-05.cleardb.net/heroku_9097815b6cfd14d?reconnect=true?enabledTLSProtocols=TLSv1.2
 #    username: root
     username: b5941b2d075b5d
 #    password: nhanbn98
